@@ -2,6 +2,7 @@ v1.5 - Pending
 	+ Replace artist view for library with genre view
 	+ Display covers for albums in artist/genre views
 	+ Add menu items and shortcuts for playing library items after add/replace
+	+ Allow setting artwork for streams
 	+ Optional stylized album art with cases (Aidan)
 	+ Show untagged artists/genres in their respective library views
 	+ Allow DND of cover art from a web browser (Артем)
